[package]
name = "ttgo-tdisplay-rs"
version = "0.1.0"
authors = ["Lily Mara <lilymara@fastmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-graphics = "0.7.1"
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
esp-idf-hal = "0.39.4"
mipidsi = "0.5.0"
display-interface-spi = "0.4.1"

[build-dependencies]
embuild = "0.30.4"
