[package]
name = "ttgo-tdisplay-rs"
version = "0.1.0"
authors = ["Lily Mara <lilymara@fastmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-graphics = "0.7.1"
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
esp-idf-hal = "0.39.4"
mipidsi = "0.5.0"
display-interface-spi = "0.4.1"
display-interface = "0.4.1"
embedded-hal = "0.2.7"
tinybmp = "0.4"

[build-dependencies]
embuild = "0.30.4"
glob = "0.3.1"

[patch.crates-io]
# esp-idf-hal = { path = "/Users/lily/projects/github.com/esp-rs/esp-idf-hal" }
# display-interface-spi = { path = "/Users/lily/projects/github.com/therealprof/display-interface/spi" }
